Continuing to bug fix tooltips not showing up

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,7 +34,3 @@ body {
 .header, .signup-errors, .email, .password, .password-confirmation, .submit, .remember-me, .shared-links {
   text-align: center;
 }
-
-.remember-me {
-  display: inline-block;
-}
